maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:28: error: type mismatch;
 found   : (x: Double)Double <and> (x: Float)Float <and> (x: Long)Long <and> (x: Int)Int <and> (x: Char)Int <and> (x: Short)Int <and> (x: Byte)Int
 required: Int
  if (x-1>0) {if (!aMurOuest(x,y) && getIndication(x-,y)==9999) {return true}
                                                    ^